--- a/ui/index.html
+++ b/ui/index.html
@@ -46,7 +46,7 @@
                 <li><a href="#section2">Types of Aircraft </a></li>
                 <li><a href="#section3">US State List</a></li>
                 <li><a href="#section4">Read More</a></li>
-                <li><a target="_blank" href="http://localhost:8080/docs">Try API</a></li>
+                <li><a target="_blank" href="https://api.anandpiyush.com/docs">Try API</a></li>
               </ul>
             </nav>
 
